[package]
authors = ["PureStake"]
edition = "2018"
name = "nimbus-primitives"
version = "0.1.0"
description = "Primitive types and traites used in the nimbus consensus framework"

[dependencies]
axia-scale-codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", version = "2.3.1", default-features = false, features = ["derive"] }
async-trait = { version = "0.1", optional = true }

frame-support = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
frame-system = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-std = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-api = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-application-crypto = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-inherents = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
scale-info = { git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", version = "1.0.0", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
    "axia-scale-codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-api/std",
    "sp-std/std",
    "sp-application-crypto/std",
    "sp-runtime/std",
    "sp-inherents/std",
    "async-trait",
    "scale-info/std",
]
