[package]
name = "allychain-template-node"
version = "0.1.0"
authors = ["Anonymous"]
description = "A new Cumulus FRAME-based Axlib Node, ready for hacking together a allychain."
license = "Unlicense"
homepage = "https://axlib.dev"
repository = "https://github.com/axia-tech/cumulus/"
edition = "2018"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
axlib-build-script-utils = { git = "https://github.com/axia-tech/axlib", branch = "dev" }

[[bin]]
name = "allychain-collator"
path = "src/main.rs"

[features]
runtime-benchmarks = ["allychain-template-runtime/runtime-benchmarks"]

[dependencies]
derive_more = "0.99.2"
log = "0.4.14"
codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", package = "axia-scale-codec", version = "2.3.1" }
structopt = "0.3.8"
serde = { version = "1.0.119", features = ["derive"] }
hex-literal = "0.3.1"

# RPC related Dependencies
jsonrpc-core = { git = "https://github.com/axia-tech/jsonrpc", branch = "master", version = "18.0.0" } 

# Local Dependencies
allychain-template-runtime = { path = "../runtime" }
nimbus-primitives = { path = "../../nimbus-primitives"}
nimbus-consensus = { path = "../../nimbus-consensus"}

# Axlib Dependencies
frame-benchmarking = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
frame-benchmarking-cli = { git = "https://github.com/axia-tech/axlib", branch = "dev" }

pallet-transaction-payment-rpc = { git = "https://github.com/axia-tech/axlib", branch = "dev" }

axlib-frame-rpc-system = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
axlib-prometheus-endpoint = { git = "https://github.com/axia-tech/axlib", branch = "dev" }

## Axlib Client Dependencies
sc-basic-authorship = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sc-chain-spec = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sc-cli = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sc-client-api = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sc-consensus = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sc-consensus-manual-seal = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sc-executor = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sc-network = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sc-keystore = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sc-rpc = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sc-rpc-api = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sc-service = { git = "https://github.com/axia-tech/axlib", features = ["wasmtime"] , branch = "dev" }
sc-telemetry = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sc-transaction-pool = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sc-transaction-pool-api = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sc-tracing = { git = "https://github.com/axia-tech/axlib", branch = "dev" }

## Axlib Primitive Dependencies
sp-api = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-block-builder = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-blockchain = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
#sp-consensus = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-inherents = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-keystore = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-offchain = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-session = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-timestamp = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-transaction-pool = { git = "https://github.com/axia-tech/axlib", branch = "dev" }

# Cumulus dependencies
cumulus-client-cli = { git = "https://github.com/axia-tech/cumulus", branch = "master" }
cumulus-client-collator = { git = "https://github.com/axia-tech/cumulus", branch = "master" }
cumulus-client-consensus-common = { git = "https://github.com/axia-tech/cumulus", branch = "master" }
cumulus-client-network = { git = "https://github.com/axia-tech/cumulus", branch = "master" }
cumulus-client-service = { git = "https://github.com/axia-tech/cumulus", branch = "master" }
cumulus-primitives-core = { git = "https://github.com/axia-tech/cumulus", branch = "master" }
cumulus-primitives-allychain-inherent = { git = "https://github.com/axia-tech/cumulus", branch = "master" }

# Axia dependencies
axia-cli = { git = "https://github.com/axia-tech/axia", branch = "dev" }
axia-allychain = { git = "https://github.com/axia-tech/axia", branch = "dev" }
axia-primitives = { git = "https://github.com/axia-tech/axia", branch = "dev" }
axia-service = { git = "https://github.com/axia-tech/axia", branch = "dev" }
axia-test-service = { git = "https://github.com/axia-tech/axia", branch = "dev" }
