[package]
authors = ["PureStake"]
edition = "2018"
name = "pallet-aura-style-filter"
version = "0.1.0"

[dependencies]
axia-scale-codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", version = "2.3.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
frame-support = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
frame-system = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
sp-std = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
nimbus-primitives = { path = "../../nimbus-primitives", default-features = false }
scale-info = { git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", version = "1.0.0", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
    "serde",
    "axia-scale-codec/std",
    "frame-support/std",
    "frame-system/std",
    "nimbus-primitives/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "scale-info/std",
]
